# minority-report

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
minority_report/: cli.py
